--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,13 +17,20 @@ services:
       - /usr/src/app/node_modules
     ports:
       - "3000:3000"
-      - "5555:5555" 
+      - "5555:5555"
     environment:
       DATABASE_URL: "postgresql://postgres:postgres@db:5432/riang"
       NODE_ENV: development
     depends_on:
-      - db
-    command: ["sh", "-c", "npx prisma generate && npx nodemon --legacy-watch server.js"]
+      db:
+        condition: service_started
+    command: >
+      sh -c "
+      npx prisma generate &&
+      npx prisma migrate deploy ||
+      npx prisma db push &&
+      npx nodemon --legacy-watch server.js
+      "
 
   pgadmin:
     image: dpage/pgadmin4
